# wrk

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
scripts/: package_release.py
src/: cli.rs  config.rs  logbook.rs  main.rs
