[package]
name = "wrk"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "A low-friction CLI for tracking daily work in markdown logs"
readme = "README.md"
documentation = "https://docs.rs/wrk"
license = "Apache-2.0"
homepage = "https://github.com/superfuture-dev/wrk"
repository = "https://github.com/superfuture-dev/wrk"
keywords = ["cli", "notes", "productivity", "worklog", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
emojis = "0.8.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
toml = "0.9.7"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
